# aus_data_scraper

./: .env.example  .gitignore  FRONTEND_SETUP.md  README.md  example_api_usage.py  plan.md  pyproject.toml  requirements.txt  start_frontend.bat  start_frontend.sh
api/: server.py
config/: logging_config.py  settings.py
data/bringing-partner-or-family/: final_result.json
data/bringing-partner-or-family/enriched_pages/: page_000_immi.homeaffairs.gov.au_visas_bringing-someone_bringing-partner-or-family.json  (+2 more)
data/employing_workers_final/: final_result.json
data/entering-australia/: final_result.json
data/leaving-australia/: final_result.json
data/settle-in-australia/: final_result.json
data/visa-all/: final_result.json
data/visa-listing/: final_result.json
scraper/: __init__.py  browser.py  file_manager.py  generic_crawler.py  generic_enricher.py  generic_parser.py  generic_scraper.py  llm_client.py  models.py  overview.md  requirements.txt  run.py  settings.py
src/: api.py  generic_scraper.py  main.py
src/crawler/: browser.py  detail_crawler.py  listing_crawler.py
src/enrichment/: enricher.py  generic_enricher.py  llm_client.py
src/models/: generic.py  listing.py  visa.py
src/parser/: detail_parser.py  generic_parser.py  listing_parser.py
src/storage/: file_manager.py  state_manager.py
src/utils/: delays.py  section_detector.py  url_utils.py  validation.py
web/: QUICKSTART.md  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
(+359 files in other folders)
